# bailiff

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  config.yaml  pyproject.toml  requirements.txt
bailiff/: main.py
bailiff/core/: config.py  db.py  events.py  logging.py  session.py
bailiff/features/analysis/: digestion.py  exporter.py  summarization.py
bailiff/features/assistant/: llm.py  memory_client.py  rag.py  schemas.py  service.py
bailiff/features/audio_ingest/: capture.py  interfaces.py  preprocessor.py  service.py  vad.py
bailiff/features/audio_ingestion/: capture.py
bailiff/features/diarization/: engine.py  merge.py  service.py  source.py
bailiff/features/memory/: models.py  service.py  storage.py  vector_db.py
bailiff/features/transcription/: engine.py  service.py
bailiff/features/ui/: app.py  widgets.py
bailiff/features/ui/screens/: execution.py  list_meetings.py  menu.py  transcription.py
scripts/: test_models.py  use_pyaudiowpatch.py
